--- a/index.html
+++ b/index.html
@@ -72,11 +72,10 @@
               <img src="images/misc/profile.jpg">
             </figure>
             <div class="content">
-              <h2 style="margin-top: 1em">Zudi Lin</h2>
+              <h2 style="margin-top: 1em">Xuanhua He</h2>
               <p>
-                <b>Amazon Alexa</b><br/> 
-                101 Main Street<br/> 
-                Cambridge, MA 02142
+                <b>University of Science and Technolog of China</b><br/> 
+                Hefei, China
               </p>
             </div>
             <!-- social network icons -->
@@ -118,20 +117,11 @@
             <!--About Me-->
             <h2 id="intro">About Me</h2>
             <p>
-              I am an <b>Applied Scientist</b> at Amazon Alexa. I obtained my Ph.D. degree in Computer Science in 2022 from 
-              the John A. Paulson School of Engineering and Applied Sciences at <a href="https://www.harvard.edu/" target="_blank">Harvard University</a>, advised by Prof.
-              <a href="https://vcg.seas.harvard.edu/people" target="_blank">Hanspeter Pfister</a>. I also worked closely with Prof. <a href="https://lichtmanlab.fas.harvard.edu/people/jeff-lichtman" target="_blank">Jeff W. Lichtman</a>. I obtained 
-              M.S. in Computer Science from <a href="https://www.harvard.edu/" target="_blank">Harvard University</a> in 2020 and 
-              B.S. in Biological Science from <a href="https://www.tsinghua.edu.cn/en/" target="_blank">Tsinghua University</a> in 2017.
+      I am current a Master's student at the <a href="https://en.ustc.edu.cn/" target="_blank">University of Science and Technology of China</a>, advised by Professors Jie Zhang and <a href="https://auto.ustc.edu.cn/2021/0510/c25977a484824/page.htm" target="_blank">Chengjun Xie</a> I earned my Bachelor's in Software Engineering in 2022 from <a href="https://en.xmu.edu.cn/main.htm" target="_blank">Xiamen University</a>, under the guidance of Professor <a href="http://mocom.xmu.edu.cn/static/lai-ch" target="_blank">Yongxuan Lai</a>. During my undergraduate studies, I also engaged in research at the <a href="http://mocom.xmu.edu.cn/" target="_blank">MOCOM</a> lab.
             </p>
 
             <p>
-              I am interested in deep learning, with applications in speech, computer vision, and neuroscience. My current work 
-              focuses on speech processing and understanding.
-              My previous research topics include semantic and instance segmentation, active learning, unsupervised learning, 
-              and the analysis of comprehensive neuron connectivity in microscopy images of animal brains. I am the author of 
-              <img src="images/misc/pytc.png" alt="PyTC" width="25" height="22" style="vertical-align:middle"> 
-              <a href="https://connectomics.readthedocs.io/" target="_blank">PyTorch Connectomics</a>.
+My research interests are centered around computer vision, specifically in image super-resolution, enhancement, and video generation. Previously, I have explored remote sensing image processing and federated learning. My goal is to make the world looks beautiful and clear.
             </p>
             
 
