--- a/index.html
+++ b/index.html
@@ -80,16 +80,16 @@
             </div>
             <!-- social network icons -->
             <div class="social">
-              <a href="https://github.com/zudi-lin" target="_blank">
+              <a href="https://github.com/alexhe101" target="_blank">
                 <span class="fab fa-github fa-2x" style="display:inline; text-decoration: none; color: #4a4a4a;"></span>
               </a>
-              <a href="https://scholar.google.com/citations?user=xYh5BEIAAAAJ" target="_blank">
+<!--               <a href="https://scholar.google.com/citations?user=xYh5BEIAAAAJ" target="_blank">
                 <span class="fab fa-google fa-2x" style="display:inline; text-decoration: none; color: #4a4a4a; margin-left: 15px"></span>
-              </a>
-              <a href="https://www.linkedin.com/in/zudi-lin/" target="_blank">
+              </a> -->
+<!--               <a href="https://www.linkedin.com/in/zudi-lin/" target="_blank">
                 <span class="fab fa-linkedin fa-2x" style="display:inline; text-decoration: none; color: #4a4a4a; margin-left: 15px"></span>
-              </a>
-              <a href="mailto:linzudi@gmail.com" target="_blank">
+              </a> -->
+              <a href="mailto:hexuanhua@mail.ustc.edu.cn" target="_blank">
                 <span class="fa-regular fa-envelope fa-2x" style="display:inline; text-decoration: none; color: #4a4a4a; margin-left: 15px"></span>
               </a>
             </div>
