--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="column is-2_5">
           <div class="sticky">
             <figure class="image" style="width: 11.6rem; margin-top: 6px;">
-              <img src="images/misc/profile.jpg">
+              <img src="images/misc/maifig.jpg">
             </figure>
             <div class="content">
               <h2 style="margin-top: 1em">Xuanhua He</h2>
@@ -117,7 +117,7 @@
             <!--About Me-->
             <h2 id="intro">About Me</h2>
             <p>
-      I am current a Master's student at the <a href="https://en.ustc.edu.cn/" target="_blank">University of Science and Technology of China</a>, advised by Professors Jie Zhang and <a href="https://auto.ustc.edu.cn/2021/0510/c25977a484824/page.htm" target="_blank">Chengjun Xie</a> I earned my Bachelor's in Software Engineering in 2022 from <a href="https://en.xmu.edu.cn/main.htm" target="_blank">Xiamen University</a>, under the guidance of Professor <a href="http://mocom.xmu.edu.cn/static/lai-ch" target="_blank">Yongxuan Lai</a>. During my undergraduate studies, I also engaged in research at the <a href="http://mocom.xmu.edu.cn/" target="_blank">MOCOM</a> lab.
+      I am current a Master's student at the <a href="https://en.ustc.edu.cn/" target="_blank">University of Science and Technology of China</a>, advised by Professors Jie Zhang and <a href="https://auto.ustc.edu.cn/2021/0510/c25977a484824/page.htm" target="_blank">Chengjun Xie</a>. I earned my Bachelor's in Software Engineering in 2022 from <a href="https://en.xmu.edu.cn/main.htm" target="_blank">Xiamen University</a>, under the guidance of Professor <a href="http://mocom.xmu.edu.cn/static/lai-ch" target="_blank">Yongxuan Lai</a>. During my undergraduate studies, I also engaged in research at the <a href="http://mocom.xmu.edu.cn/" target="_blank">MOCOM</a> lab.
             </p>
 
             <p>
