--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="column is-2_5">
           <div class="sticky">
             <figure class="image" style="width: 11.6rem; margin-top: 6px;">
-              <img src="images/misc/maifig.jpg">
+              <img src="images/misc/mainfig.jpg">
             </figure>
             <div class="content">
               <h2 style="margin-top: 1em">Xuanhua He</h2>
@@ -131,14 +131,14 @@ My research interests are centered around computer vision, specifically in image
             <article class="columns">
               <div class="column is-3">
                 <figure class="image">
-                  <img src="images/misc/alexa.png" class="img-logo">
+                  <img src="images/misc/baidu.png" class="img-logo">
                 </figure>
               </div>
               <div class="column">
                 <div class="content">
                   <p>
-                    <b>Applied Scientist</b> | Amazon Alexa<br>
-                    Time: Jun 2022 - Present.  
+                    <b>Computer Vision Engineer Intern</b> | Baidu Inc<br>
+                    Time: Nov 2023 - Present.  
                   </p>
                 </div>
               </div>
@@ -147,20 +147,20 @@ My research interests are centered around computer vision, specifically in image
             <article class="columns">
               <div class="column is-3">
                 <figure class="image">
-                  <img src="images/misc/harvard.png" class="img-logo">
+                  <img src="images/misc/horizon.jpg" class="img-logo">
                 </figure>
               </div>
               <div class="column">
                 <div class="content">
                   <p>
-                    <b>Research Assistant</b> | School of Engineering and Applied Sciences, Harvard University<br>
-                    Time: Aug 2017 - Jun 2022. Advisor: Prof. <a href="https://vcg.seas.harvard.edu/people" target="_blank">Hanspeter Pfister</a>  
+                    <b>Research Inter</b> | Horizon Robitcs<br>
+                    Time: Jun 2023 - Nov 2023. Mentor: Doc. <a href="https://scholar.google.com/citations?user=z-25fk0AAAAJ&hl=en" target="_blank">Guoli Wang</a>  
                   </p>
                 </div>
               </div>
             </article>
 
-            <article class="columns">
+<!--             <article class="columns">
               <div class="column is-3">
                 <figure class="image">
                   <img src="images/misc/aws.jpeg" class="img-logo">
@@ -175,8 +175,8 @@ My research interests are centered around computer vision, specifically in image
                 </div>
               </div>
             </article>
-
-            <article class="columns">
+ -->
+<!--             <article class="columns">
               <div class="column is-3">
                 <figure class="image">
                   <img src="images/misc/merl.png" class="img-logo">
@@ -191,7 +191,7 @@ My research interests are centered around computer vision, specifically in image
                 </div>
               </div>
             </article>
-
+ -->
             <!--Publications-->
             <h2 id="publications">
               Publications
