--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Zudi Lin</title>
+  <title>Xuanhua He</title>
   <link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
   <link rel="shortcut icon" type="image/x-icon" href="images/misc/favicon.png">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
@@ -138,7 +138,8 @@ My research interests are centered around computer vision, specifically in image
                 <div class="content">
                   <p>
                     <b>Computer Vision Engineer Intern</b> | Baidu Inc<br>
-                    Time: Nov 2023 - Present.  
+                    Time: Nov 2023 - Present.  <br>
+                    <b>Topic: Diffusion Model, Image Generation, Video Generation.</b>
                   </p>
                 </div>
               </div>
@@ -154,7 +155,8 @@ My research interests are centered around computer vision, specifically in image
                 <div class="content">
                   <p>
                     <b>Research Inter</b> | Horizon Robitcs<br>
-                    Time: Jun 2023 - Nov 2023. Mentor: Doc. <a href="https://scholar.google.com/citations?user=z-25fk0AAAAJ&hl=en" target="_blank">Guoli Wang</a>  
+                    Time: Jun 2023 - Nov 2023. Mentor: Dr. <a href="https://scholar.google.com/citations?user=z-25fk0AAAAJ&hl=en" target="_blank">Guoli Wang</a>.<br>
+                    <b>Topic: Image Restoration, Neural ISP</b>
                   </p>
                 </div>
               </div>
@@ -694,30 +696,16 @@ My research interests are centered around computer vision, specifically in image
             <!--Awards-->
             <h2 id="awards">Awards</h2>
             <ul>
-              <li>First Place, CVPR NTIRE Challenge on Spectral Reconstruction. 2022</li>
-              <li>MICCAI Student Travel Award. 2021</li>
-              <li>Award for Distinction in Teaching, Harvard University. 2019</li>
-              <li>Graduate Student Fellowships, Harvard University. 2017-2018</li>
-              <li>Award for Excellence in Research and Innovation, Tsinghua University. 2016</li>
-              <li>Excellent Students Research Training (SRT) Project, Tsinghua University. 2016</li>
-              <li>Tsinghua <i>Xuetang</i> Talents Program Scholarship. 2015-2017</li>
+              <li>National Scholarship, University of Science and Technology of China. 2023 </li>
+              <li>Yuequn Scholarship for Academic Excellence, University of Science and Technology of China. 2023</li>
+              <li>22nd Place in 2023 OceanBase Database Competition out of 1500 teams, Alibaba Group. 2023</li>
             </ul>
 
             <h2 id="services">Services</h2>
             <ul>
               <li>Conference and Journal Reviewer,
-                <br>&emsp;IEEE Conference on Computer Vision and Pattern Recognition (CVPR) 
-                <br>&emsp;European Conference on Computer Vision (ECCV)
-                <br>&emsp;International Conference on Computer Vision (ICCV)
-                <br>&emsp;Medical Image Computing and Computer Assisted Interventions (MICCAI)
-                <br>&emsp;Winter Conference on Applications of Computer Vision (WACV)
-                <br>&emsp;IEEE Transactions on Medical Imaging (TMI)
-                <br>&emsp;IEEE Transactions on Circuits and Systems for Video Technology (TCSVT)
-              <li>Challenge and Workshop Organizer,
-                <br>&emsp;IEEE-ISBI 2021: MitoEM Challenge for 3D Mitochondria Instance Segmentation
-              </li>
-              <li>Associate Director, Social Entrepreneurship Initiative, Harvard GSAS Business Club. 2020-2022</li>
-              <li>Student Committee Member, The Mind Brain Behavior (MBB) Initiative, Harvard University. 2019-2020</li>
+                <br>&emsp;The International Conference on Neural Information Processing (ICONIP) 
+                <br>&emsp;IEEE Transactions on Geoscience and Remote Sensing (TGRS)
             </ul>
           </div>
         </div>
@@ -728,7 +716,7 @@ My research interests are centered around computer vision, specifically in image
     <footer class="container">
       <br><hr>
       <div class="row" style="text-align: center">
-        © 2022-2024 Zudi Lin
+        © 2022-2024 This website is modified from Zhudi-Lin.
       </div>
     </footer>
   </section>
