--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             </p>
 
             <p>
-My research interests are centered around computer vision, specifically in image super-resolution, enhancement, and video generation. Previously, I have explored remote sensing image processing and federated learning. My goal is to make the world looks beautiful and clear.
+My research interests are centered around computer vision, specifically in image super-resolution, enhancement, and video generation. Previously, I have explored remote sensing image processing and federated learning. My goal is to make the world look beautiful and clear.
             </p>
             
 
