--- a/index.html
+++ b/index.html
@@ -217,6 +217,26 @@ My research interests are centered around computer vision, specifically in image
               <div class="column">
                 <div class="content">
                   <p>
+                    <b>Pan-sharpening with Wavelet Enhanced High-Frequency Information</b><br>
+                    Jie Zhang, <b>Xuanhua He (Co-first Author, First Student Author) </b>, Keyu Yan, Ke Cao, Rui Li, Chengjun Xie, Man Zhou<br>
+                    <i>IEEE Transactions on Geoscience and Remote Sensing (<b>TGRS</b>), 2024</i><br>
+                    <a href="" target="_blank">[Paper]</a>
+                    <a href="" target="_blank">[Arxiv]</a>
+                    <a href="" target="_blank">[Code]</a>
+                  </p>
+                </div>
+              </div>
+            </article>
+
+            <article class="columns">
+              <div class="column is-3">
+                <figure class="image">
+                  <img src="images/publications/velicky2022saturated.png">
+                </figure>
+              </div>
+              <div class="column">
+                <div class="content">
+                  <p>
                     <b>Frequency-adaptive Pan-sharpening with Mixture-of-Experts</b><br>
                     <b>Xuanhua He</b>, Keyu Yan, Rui Li, Chengjun Xie, Jie Zhang, Man Zhou<br>
                     <i>38th Annual AAAI Conference on Artificial Intelligence (<b>AAAI</b>), 2024</i><br>
@@ -282,8 +302,10 @@ My research interests are centered around computer vision, specifically in image
             <h2 id="services">Services</h2>
             <ul>
               <li>Conference and Journal Reviewer,
-                <br>&emsp;The International Conference on Neural Information Processing (ICONIP) 
                 <br>&emsp;IEEE Transactions on Geoscience and Remote Sensing (TGRS)
+                <br>&emsp;The International Conference on Neural Information Processing (ICONIP) 
+                <br>&emsp;The International Conference on Pattern Recognition (ICPR)
+                <br>&emsp;The International Conference on Multimedia and Expo (ICME)
             </ul>
           </div>
         </div>
