--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ My research interests are centered around computer vision, specifically in image
                 <div class="content">
                   <p>
                     <b>Pan-sharpening with Wavelet Enhanced High-Frequency Information</b><br>
-                    Jie Zhang, <b>Xuanhua He (Co-first Author, First Student Author) </b>, Keyu Yan, Ke Cao, Rui Li, Chengjun Xie, Man Zhou<br>
+                    Jie Zhang, <b>Xuanhua He (Co-first Author, First Student Author) </b>, Keyu Yan, Ke Cao, Rui Li, Chengjun Xie, Man Zhou, Danfeng Hong<br>
                     <i>IEEE Transactions on Geoscience and Remote Sensing (<b>TGRS</b>), 2024</i><br>
                     <a href="" target="_blank">[Paper]</a>
                     <a href="" target="_blank">[Arxiv]</a>
