--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               <img src="images/misc/mainfig.jpg">
             </figure>
             <div class="content">
-              <h2 style="margin-top: 1em">Xuanhua He</h2>
+              <h2 style="margin-top: 1em">Xuanhua He (何炫华)</h2>
               <p>
                 <b>University of Science and Technolog of China</b><br/> 
                 Hefei, China
