--- a/index.html
+++ b/index.html
@@ -131,6 +131,22 @@ My research interests are centered around computer vision, specifically in image
             <article class="columns">
               <div class="column is-3">
                 <figure class="image">
+                  <img src="images/misc/Tencent.jpg" class="img-logo">
+                </figure>
+              </div>
+              <div class="column">
+                <div class="content">
+                  <p>
+                    <b>Research Intern</b> | Tencent Inc<br>
+                    Time: Apr 2024 - Present.  <br>
+                    <b>Topic: Video Generation.</b> Mentor: Dr. <a href="https://liuquande.github.io/" target="_blank">Quande Liu</a>.<br>
+                  </p>
+                </div>
+              </div>
+            </article>
+            <article class="columns">
+              <div class="column is-3">
+                <figure class="image">
                   <img src="images/misc/baidu.png" class="img-logo">
                 </figure>
               </div>
@@ -138,7 +154,7 @@ My research interests are centered around computer vision, specifically in image
                 <div class="content">
                   <p>
                     <b>Computer Vision Engineer Intern</b> | Baidu Inc<br>
-                    Time: Nov 2023 - Present.  <br>
+                    Time: Nov 2023 - Mar 2024.  <br>
                     <b>Topic: Diffusion Model, Image Generation, Video Generation.</b>
                   </p>
                 </div>
@@ -211,7 +227,7 @@ My research interests are centered around computer vision, specifically in image
             <article class="columns">
               <div class="column is-3">
                 <figure class="image">
-                  <img src="images/publications/velicky2022saturated.png">
+                  <img src="images/publications/TGRS.png">
                 </figure>
               </div>
               <div class="column">
@@ -220,9 +236,9 @@ My research interests are centered around computer vision, specifically in image
                     <b>Pan-sharpening with Wavelet Enhanced High-Frequency Information</b><br>
                     Jie Zhang, <b>Xuanhua He (Co-first Author, First Student Author) </b>, Keyu Yan, Ke Cao, Rui Li, Chengjun Xie, Man Zhou, Danfeng Hong<br>
                     <i>IEEE Transactions on Geoscience and Remote Sensing (<b>TGRS</b>), 2024</i><br>
-                    <a href="" target="_blank">[Paper]</a>
+                    <a href="https://ieeexplore.ieee.org/document/10440188" target="_blank">[Paper]</a>
                     <a href="" target="_blank">[Arxiv]</a>
-                    <a href="" target="_blank">[Code]</a>
+                    <a href="https://github.com/alexhe101/WINet" target="_blank">[Code]</a>
                   </p>
                 </div>
               </div>
@@ -231,7 +247,7 @@ My research interests are centered around computer vision, specifically in image
             <article class="columns">
               <div class="column is-3">
                 <figure class="image">
-                  <img src="images/publications/velicky2022saturated.png">
+                  <img src="images/publications/AAAI.png">
                 </figure>
               </div>
               <div class="column">
@@ -240,9 +256,9 @@ My research interests are centered around computer vision, specifically in image
                     <b>Frequency-adaptive Pan-sharpening with Mixture-of-Experts</b><br>
                     <b>Xuanhua He</b>, Keyu Yan, Rui Li, Chengjun Xie, Jie Zhang, Man Zhou<br>
                     <i>38th Annual AAAI Conference on Artificial Intelligence (<b>AAAI</b>), 2024</i><br>
-                    <a href="" target="_blank">[Paper]</a>
-                    <a href="" target="_blank">[Arxiv]</a>
-                    <a href="" target="_blank">[Code]</a>
+                    <a href="https://ojs.aaai.org/index.php/AAAI/article/view/27984" target="_blank">[Paper]</a>
+                    <a href="https://arxiv.org/abs/2401.02151v1" target="_blank">[Arxiv]</a>
+                    <a href="https://github.com/alexhe101/FAME-Net" target="_blank">[Code]</a>
                   </p>
                 </div>
               </div>
@@ -251,7 +267,7 @@ My research interests are centered around computer vision, specifically in image
             <article class="columns">
               <div class="column is-3">
                 <figure class="image">
-                  <img src="images/publications/lin2023structure.png">
+                  <img src="images/publications/AAAI.png">
                 </figure>
               </div>
               <div class="column">
@@ -260,9 +276,9 @@ My research interests are centered around computer vision, specifically in image
                     <b>Enhancing RAW-to-sRGB with Decoupled Style Structure in Fourier Domain</b><br>
                     <b>Xuanhua He</b>, Tao Hu, Guoli Wang, Zejin Wang, Run Wang, Qian Zhang, Keyu Yan, Ziyi Chen, Rui Li, Chengjun Xie, Jie Zhang, Man Zhou<br>
                     <i>38th Annual AAAI Conference on Artificial Intelligence (<b>AAAI</b>), 2024</i><br>
-                    <a href="" target="_blank">[Paper]</a>
-                    <a href="" target="_blank">[arXiv]</a>
-                    <a href="" target="_blank">[Code]</a><br>
+                    <a href="https://ojs.aaai.org/index.php/AAAI/article/view/27985" target="_blank">[Paper]</a>
+                    <a href="https://arxiv.org/abs/2401.02161v1" target="_blank">[arXiv]</a>
+                    <a href="https://github.com/alexhe101/FourierISP" target="_blank">[Code]</a><br>
 <!--                     <em class="blue"><b>Oral Presentation</b></em> -->
                   </p>
                 </div>
@@ -272,7 +288,7 @@ My research interests are centered around computer vision, specifically in image
             <article class="columns">
               <div class="column is-3">
                 <figure class="image">
-                  <img src="images/publications/lin2023structure.png">
+                  <img src="images/publications/iccv.png">
                 </figure>
               </div>
               <div class="column">
@@ -281,7 +297,7 @@ My research interests are centered around computer vision, specifically in image
                     <b>Pyramid Dual Domain Injection Network for Pan-sharpening</b><br>
                     <b>Xuanhua He</b>, Keyu Yan, Rui Li, Chengjun Xie, Jie Zhang, Man Zhou<br>
                     <i>International Conference on Computer Vision (<b>ICCV</b>), 2023</i><br>
-                    <a href="" target="_blank">[Paper]</a>
+                    <a href="https://openaccess.thecvf.com/content/ICCV2023/papers/He_Pyramid_Dual_Domain_Injection_Network_for_Pan-sharpening_ICCV_2023_paper.pdf" target="_blank">[Paper]</a>
                     <a href="" target="_blank">[arXiv]</a>
                     <a href="" target="_blank">[Code]</a><br>
 <!--                     <em class="blue"><b>Oral Presentation</b></em> -->
@@ -296,16 +312,14 @@ My research interests are centered around computer vision, specifically in image
             <ul>
               <li>National Scholarship, University of Science and Technology of China. 2023 </li>
               <li>Yuequn Scholarship for Academic Excellence, University of Science and Technology of China. 2023</li>
-              <li>22nd Place in 2023 OceanBase Database Competition out of 1500 teams, Alibaba Group. 2023</li>
+              <!-- <li>22nd Place in 2023 OceanBase Database Competition out of 1500 teams, Alibaba Group. 2023</li> -->
             </ul>
 
             <h2 id="services">Services</h2>
             <ul>
               <li>Conference and Journal Reviewer,
                 <br>&emsp;IEEE Transactions on Geoscience and Remote Sensing (TGRS)
-                <br>&emsp;The International Conference on Neural Information Processing (ICONIP) 
-                <br>&emsp;The International Conference on Pattern Recognition (ICPR)
-                <br>&emsp;The International Conference on Multimedia and Expo (ICME)
+                <br>&emsp;ACM MULTIMEDIA (ACM MM)
             </ul>
           </div>
         </div>
