--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ My research interests are centered around computer vision, specifically in image
             <h2 id="publications">
               Selected Publications
               <span style="font-size: 1rem;margin-left: 1rem;position: relative;bottom: .2rem;">
-                <a href="" target="_blank" style="font-size: 21px;">
+                <a href="https://scholar.google.com/citations?user=-bDAN2YAAAAJ&hl=en" target="_blank" style="font-size: 21px;">
                   [Google Scholar]
                 </a>
                 <a href="" target="_blank" style="font-size: 21px;">
