--- a/index.html
+++ b/index.html
@@ -223,6 +223,26 @@ My research interests are centered around computer vision, specifically in image
               </span>
             </h2>
 
+            <article class="columns">
+              <div class="column is-3">
+                <figure class="image">
+                  <img src="images/publications/TGRS.png">
+                </figure>
+              </div>
+              <div class="column">
+                <div class="content">
+                  <p>
+                    <b>Cross-Modality Interaction Network for Pan-Sharpening</b><br>
+                    Yingying Wang, <b>Xuanhua He</b>, Yuhang Dong, Yunlong Lin, Yue Huang, Xinghao Ding<br>
+                    <i>IEEE Transactions on Geoscience and Remote Sensing (<b>TGRS</b>), 2024</i><br>
+                    <a href="https://ieeexplore.ieee.org/document/10552904" target="_blank">[Paper]</a>
+                    <a href="" target="_blank">[Arxiv]</a>
+                    <a href="" target="_blank">[Code]</a>
+                  </p>
+                </div>
+              </div>
+            </article>
+
             <!--List of publications-->
             <article class="columns">
               <div class="column is-3">
