--- a/index.html
+++ b/index.html
@@ -222,6 +222,25 @@ My research interests are centered around computer vision, specifically in image
                 </a>
               </span>
             </h2>
+            <article class="columns">
+              <div class="column is-3">
+                <figure class="image">
+                  <img src="images/id.png">
+                </figure>
+              </div>
+              <div class="column">
+                <div class="content">
+                  <p>
+                    <b>ID-Animator: Zero-Shot Identity-Preserving Human Video Generation.</b><br>
+                    <b>Xuanhua He</b>, Quande Liu, Shengju Qian, Xin Wang, Tao Hu, Ke Cao, Keyu Yan, Jie Zhang.<br>
+                    <i>ArXiv Preprint,2024</i><br>
+                    <a href="https://arxiv.org/abs/2404.15275" target="_blank">[Paper]</a>
+                    <a href="https://id-animator.github.io/" target="_blank">[Arxiv]</a>
+                    <a href="https://github.com/ID-Animator/ID-Animator" target="_blank">[Code]</a>
+                  </p>
+                </div>
+              </div>
+            </article>
 
             <article class="columns">
               <div class="column is-3">
