--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="content">
               <h2 style="margin-top: 1em">Xuanhua He<br/> (何炫华)</h2>
               <p>
-                <b>University of Science and Technolog of China</b><br/> 
+                <b>University of Science and Technology of China</b><br/> 
                 Hefei, China
               </p>
             </div>
@@ -222,6 +222,25 @@ My research interests are centered around computer vision, specifically in image
                 </a>
               </span>
             </h2>
+            <article class="columns">
+              <div class="column is-3">
+                <figure class="image">
+                  <img src="images/geno.png">
+                </figure>
+              </div>
+              <div class="column">
+                <div class="content">
+                  <p>
+                    <b>GameGen-O: Open-world Video Game Generation</b><br>
+                    Haoxuan Che, <b>Xuanhua He (Co-first Author) </b>,, Quande Liu, Shengju Qian, Cheng Jin, Xin Wang, Hao Chen<br>
+                    <i>ArXiv Preprint,2024</i><br>
+                    <a href="https://gamegen-o.github.io/" target="_blank">[Paper]</a>
+                    <a href="https://gamegen-o.github.io/" target="_blank">[Arxiv]</a>
+                    <a href="https://github.com/GameGen-O/GameGen-O/" target="_blank">[Code]</a>
+                  </p>
+                </div>
+              </div>
+            </article>
             <article class="columns">
               <div class="column is-3">
                 <figure class="image">
