--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ My research interests are centered around computer vision, specifically in image
                 </a>
               </span>
             </h2>
-            <article class="columns">
+<!--             <article class="columns">
               <div class="column is-3">
                 <figure class="image">
                   <img src="images/geno.png">
@@ -240,7 +240,7 @@ My research interests are centered around computer vision, specifically in image
                   </p>
                 </div>
               </div>
-            </article>
+            </article> -->
             <article class="columns">
               <div class="column is-3">
                 <figure class="image">
