--- a/index.html
+++ b/index.html
@@ -222,25 +222,26 @@ My research interests are centered around computer vision, specifically in image
                 </a>
               </span>
             </h2>
-<!--             <article class="columns">
+            <article class="columns">
               <div class="column is-3">
-                <figure class="image">
-                  <img src="images/geno.png">
+                <figure class="video">
+                  <video src="https://github.com/3A2077/3A2077.github.io/raw/main/videos/OGameGen_Func.mp4" controls>
+                  </video>
                 </figure>
               </div>
               <div class="column">
                 <div class="content">
                   <p>
-                    <b>GameGen-O: Open-world Video Game Generation</b><br>
-                    Haoxuan Che, <b>Xuanhua He (Co-first Author) </b>,, Quande Liu, Shengju Qian, Cheng Jin, Xin Wang, Hao Chen<br>
+                    <b>GameGen-X: Interactive Open-World Game Video Generation</b><br>
+                    Haoxuan Che, <b>Xuanhua He (Co-first Author) </b>, Quande Liu, Cheng Jin, Hao Chen<br>
                     <i>ArXiv Preprint,2024</i><br>
-                    <a href="https://gamegen-o.github.io/" target="_blank">[Paper]</a>
-                    <a href="https://gamegen-o.github.io/" target="_blank">[Arxiv]</a>
-                    <a href="https://github.com/GameGen-O/GameGen-O/" target="_blank">[Code]</a>
+                    <a href="https://gamegen-x.github.io/" target="_blank">[Paper]</a>
+                    <a href="https://arxiv.org/abs/2411.00769" target="_blank">[Arxiv]</a>
+                    <a href="https://github.com/GameGen-X/GameGen-X" target="_blank">[Code]</a>
                   </p>
                 </div>
               </div>
-            </article> -->
+            </article>
             <article class="columns">
               <div class="column is-3">
                 <figure class="image">
