--- a/index.html
+++ b/index.html
@@ -369,6 +369,7 @@ My research interests are centered around computer vision, specifically in image
             <!--Awards-->
             <h2 id="awards">Awards</h2>
             <ul>
+              <li>National Scholarship, University of Science and Technology of China. 2024 </li>
               <li>National Scholarship, University of Science and Technology of China. 2023 </li>
               <li>Yuequn Scholarship for Academic Excellence, University of Science and Technology of China. 2023</li>
               <!-- <li>22nd Place in 2023 OceanBase Database Competition out of 1500 teams, Alibaba Group. 2023</li> -->
@@ -384,7 +385,7 @@ My research interests are centered around computer vision, specifically in image
         </div>
       </div>
     </div>
-
+    <script type="text/javascript" src="//rf.revolvermaps.com/0/0/6.js?i=5tivn6sk3qk&amp;m=7&amp;c=e63100&amp;cr1=ffffff&amp;f=arial&amp;l=0&amp;bv=90&amp;lx=-420&amp;ly=420&amp;hi=20&amp;he=7&amp;hc=a8ddff&amp;rs=80" async="async"></script>
     <!-- Footer -->
     <footer class="container">
       <br><hr>
