--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ My research interests are centered around computer vision, specifically in image
                 <div class="content">
                   <p>
                     <b>Research Intern</b> | Tencent Inc<br>
-                    Time: Apr 2024 - Present.  <br>
+                    Time: Apr 2024 - Oct 2024.  <br>
                     <b>Topic: Video Generation.</b> Mentor: Dr. <a href="https://liuquande.github.io/" target="_blank">Quande Liu</a>.<br>
                   </p>
                 </div>
