--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ My research interests are centered around computer vision, specifically in image
                   <p>
                     <b>GameGen-X: Interactive Open-World Game Video Generation</b><br>
                     Haoxuan Che, <b>Xuanhua He (Co-first Author) </b>, Quande Liu, Cheng Jin, Hao Chen<br>
-                    <i>ArXiv Preprint,2024</i><br>
+                    <i>2025 International Conference on Learning Representations (<b>ICLR</b>)</i><br>
                     <a href="https://gamegen-x.github.io/" target="_blank">[Paper]</a>
                     <a href="https://arxiv.org/abs/2411.00769" target="_blank">[Arxiv]</a>
                     <a href="https://github.com/GameGen-X/GameGen-X" target="_blank">[Code]</a>
