--- a/index.html
+++ b/index.html
@@ -132,6 +132,25 @@ My research interests are centered around computer vision, specifically in image
             <article class="columns">
               <div class="column is-3">
                 <figure class="image">
+                  <img src="images/misc/kuaishou.png" class="img-logo">
+                </figure>
+              </div>
+              <div class="column">
+                <div class="content">
+                  <p>
+                    <b>Research Intern</b> | Kling AI team, Kuaishou Inc<br>
+                    Time: Feb 2025 - Present.  <br>
+                    <b>Topic: Diffusion Model, Video Generation.</b>
+                  </p>
+                </div>
+              </div>
+            </article>
+
+
+            
+            <article class="columns">
+              <div class="column is-3">
+                <figure class="image">
                   <img src="images/misc/baidu.png" class="img-logo">
                 </figure>
               </div>
