--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ My research interests are centered around computer vision, specifically in image
                 <div class="content">
                   <p>
                     <b>Research Intern</b> | Kling AI team, Kuaishou Inc<br>
-                    Time: Feb 2025 - Present.  <br>
+                    Time: Feb 2025 - Present. Mentor: Dr. <a href="https://liuquande.github.io" target="_blank">Quande Liu</a>.<br> <br>
                     <b>Topic: Diffusion Model, Video Generation.</b>
                   </p>
                 </div>
