--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
               <a href="https://github.com/alexhe101" target="_blank">
                 <span class="fab fa-github fa-2x" style="display:inline; text-decoration: none; color: #4a4a4a;"></span>
               </a>
-<!--               <a href="https://scholar.google.com/citations?user=xYh5BEIAAAAJ" target="_blank">
+               <a href="https://scholar.google.com/citations?user=-bDAN2YAAAAJ" target="_blank">
                 <span class="fab fa-google fa-2x" style="display:inline; text-decoration: none; color: #4a4a4a; margin-left: 15px"></span>
-              </a> -->
+              </a> 
 <!--               <a href="https://www.linkedin.com/in/zudi-lin/" target="_blank">
                 <span class="fab fa-linkedin fa-2x" style="display:inline; text-decoration: none; color: #4a4a4a; margin-left: 15px"></span>
               </a> -->
@@ -132,14 +132,14 @@ My research interests are centered around computer vision, specifically in image
             <article class="columns">
               <div class="column is-3">
                 <figure class="image">
-                  <img src="images/misc/kuaishou.png" class="img-logo">
+                  <img src="images/misc/kuaishou.jpg" class="img-logo">
                 </figure>
               </div>
               <div class="column">
                 <div class="content">
                   <p>
                     <b>Research Intern</b> | Kling AI team, Kuaishou Inc<br>
-                    Time: Feb 2025 - Present. Mentor: Dr. <a href="https://liuquande.github.io" target="_blank">Quande Liu</a>.<br> <br>
+                    Time: Feb 2025 - Present. Mentor: Dr. <a href="https://liuquande.github.io" target="_blank">Quande Liu</a>.<br>
                     <b>Topic: Diffusion Model, Video Generation.</b>
                   </p>
                 </div>
