--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ My research interests are centered around computer vision, specifically in image
             <article class="columns">
               <div class="column is-3">
                 <figure class="image">
-                  <img src="images/misc/kuaishou.jpg" class="img-logo">
+                  <img src="images/misc/kuaishou.png" class="img-logo">
                 </figure>
               </div>
               <div class="column">
