--- a/index.html
+++ b/index.html
@@ -145,9 +145,22 @@ My research interests are centered around computer vision, specifically in image
                 </div>
               </div>
             </article>
-
-
-            
+            <article class="columns">
+              <div class="column is-3">
+                <figure class="image">
+                  <img src="images/misc/Tencent.jpg" class="img-logo">
+                </figure>
+              </div>
+              <div class="column">
+                <div class="content">
+                  <p>
+                    <b>Research Intern</b> | Tencent Inc<br>
+                    Time: Apr 2024 - Oct 2024.  <br>
+                    <b>Topic: Video Generation.</b> Mentor: Dr. <a href="https://liuquande.github.io/" target="_blank">Quande Liu</a>.<br>
+                  </p>
+                </div>
+              </div>
+            </article>
             <article class="columns">
               <div class="column is-3">
                 <figure class="image">
@@ -466,3 +479,4 @@ My research interests are centered around computer vision, specifically in image
 </body>
 
 </html>
+
