--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ My research interests are centered around computer vision, specifically in image
               <div class="column">
                 <div class="content">
                   <p>
-                    <b>Research Intern</b> | Horizon Robitcs<br>
+                    <b>Research Intern</b> | Horizon Robotics<br>
                     Time: Jun 2023 - Nov 2023. Mentor: Dr. <a href="https://scholar.google.com/citations?user=z-25fk0AAAAJ&hl=en" target="_blank">Guoli Wang</a>.<br>
                     <b>Topic: Image Restoration, Neural ISP</b>
                   </p>
@@ -479,4 +479,5 @@ My research interests are centered around computer vision, specifically in image
 </body>
 
 </html>
+
 
